--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.2.1",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "react-google-maps": "^9.4.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -26,6 +27,7 @@
     "nodemon": "^1.17.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "recompose": "^0.27.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8"
   }
